src/objects/PSA_Combine_Receipts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in the code that creates combined receipts documents from Expense attachments</description>
    <fields>
        <fullName>PSA_Email_Notify_List__c</fullName>
        <description>Comma-separated list of email addresses that should be notified with the number of remaining credits</description>
        <inlineHelpText>Comma-separated list of email addresses that should be notified with the number of remaining credits</inlineHelpText>
        <label>Email Notify List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Max_Convert_Attempts__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Number of times PSA will check the status of the conversion jobs.  After this number is reached, the job that checks the conversion status will no longer run</description>
        <inlineHelpText>Number of times PSA will check the status of the conversion jobs.  After this number is reached, the job that checks the conversion status will no longer run</inlineHelpText>
        <label>Max Convert Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Notification_Threshold__c</fullName>
        <description>Number of remaining credits below which an email notification should be sent</description>
        <inlineHelpText>Number of remaining credits below which an email notification should be sent</inlineHelpText>
        <label>Notification Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Send_Low_Credit_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, checks to see the remaining credits are below a pre-defined threshold.  If so, then send an email alert</description>
        <inlineHelpText>If true, checks to see the remaining credits are below a pre-defined threshold.  If so, then send an email alert</inlineHelpText>
        <label>Send Low Credit Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Target_Format__c</fullName>
        <description>Target format for the converted file</description>
        <inlineHelpText>Target format for the converted file</inlineHelpText>
        <label>Target Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Test_Mode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether or not to use the file conversion test system</description>
        <inlineHelpText>Determines whether or not to use the file conversion test system</inlineHelpText>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Zamzar_API_Key__c</fullName>
        <description>api key used to authenticate to the zamzar file conversion service</description>
        <inlineHelpText>api key used to authenticate to the zamzar file conversion service</inlineHelpText>
        <label>Zamzar API Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Zamzar_Prod_URL__c</fullName>
        <description>Production URL for Zamzar file conversion service</description>
        <inlineHelpText>Production URL for Zamzar file conversion service</inlineHelpText>
        <label>Zamzar Prod URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Zamzar_Test_URL__c</fullName>
        <description>Test URL for Zamzar file conversion service</description>
        <inlineHelpText>Test URL for Zamzar file conversion service</inlineHelpText>
        <label>Zamzar Test URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PSA Combine Receipts</label>
</CustomObject>